<resources>
    <string name="app_name">Dino</string>
    <string name="title_activity_reference">ReferenceActivity</string>
    <string name="nombreUser">Nombre Usuario.</string>
    <string name="contraseña">Ingrese una Clave</string>
    <string name="passw">Contraseña</string>
    <string name="login">Enviar</string>
    <string name="no_tiene_cuenta">No tienes Cuenta?</string>
    <string name="crea_aqui">|Crea una aquí.</string>
    <string name="mail">Correo</string>
    <string name="name">Nombre</string>
    <string name="user">Usuario</string>
    <string name="confirma">Confirme su Contraseña</string>
    <string name="crear">Crear Cuenta</string>
    <string name="crear_toolbar">Crear Cuenta</string>
    <string name="text2_card">Hace</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_favorites">Favoritos</string>
    <string name="tab_friends">Amigos</string>
    <string name="tab_nearby">Cerca</string>
    <string name="tab_home">Inicio</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
