<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arcos.dino.dino.LoginActivity"
    android:background="@color/primary">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.6">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@drawable/dino2"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_login">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditWhite">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/username"
                    android:hint="@string/nombreUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />



            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditWhite">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/pass"
                    android:hint="@string/passw"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:theme="@style/temaBoton"
                android:onClick="bottom"/>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/googleBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/temaBoton">

            </com.google.android.gms.common.SignInButton>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <TextView
                    android:id="@+id/noCuenta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_tiene_cuenta"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/no_cuenta"/>
                <TextView
                    android:id="@+id/crearCuenta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crea_aqui"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/no_cuenta"
                    android:layout_toRightOf="@+id/noCuenta"
                    android:onClick="crearCuenta"/>

            </RelativeLayout>

        </LinearLayout>


    </ScrollView>


</LinearLayout>
</android.support.design.widget.CoordinatorLayout>